<resources>
    <string name="app_name">Poker Assistant</string>
    <string name="textview">TextView</string>
    <string name="fold">Фолд</string>
    <string name="call">КОЛЛ</string>
    <string name="reiz">РЕЙЗ</string>
    <string name="bank">TextView</string>
    <string name="info">инфо</string>
    <string name="rules1">В игре может участвовать от 2 до 10 человек. Каждому игроку в Техасском Холжеме раздается по две карты.
После раздачи начинается торговля, которая проходит в несколько раундов.
Два игрока по левую руку от дилера делают обязательные ставки, которые взимаются еще до начала торгов. Это делается для того, чтобы стимулировать игроков на активную игру. Эти обязательные ставки называются блайндами. Таковы правила игры в покер.</string>
    После того, как игроки поставили блайнды, начинается первый этап торговли.
    <string name="rules2">Правила игры в покер подразумевают наличие определенных действий, которые игрок совершает в процессе торговли:
\nПоставить, бет (англ. bet) – сделать ставку
\nОтветить, колл (англ. call) – поставить столько же, сколько поставил соперник – уравнять
\nПоднять, рейз (англ. raise) – увеличить ставку – поставить больше, чем соперники
\nCбросить карты, фолд (англ. fold) – отказаться от дальнейшего участия в игре и сбросить карты
\nПропустить, чек (англ. check) – в ситуациях, когда ставка уже была сделана или ставки не были сделаны соперниками – не добавлять ничего в банк, оставить «как есть»</string>
    <string name="rules3">Круг торговли заканчивается тогда, когда все игроки сделали равные ставки или сбросили карты.
\nПосле первого круга торговли, если в раздаче остается больше одного человека, то, по правилам игры в покер, на стол кладутся три общие открытые карты, которые называют флоп. Общие карты нужно использовать для составления комбинаций.
\nЕсли и после этого раунда в раздаче остается больше одного человека, то кладут еще одну общую карту, которую называют терном. Аналогично флопу, после сдачи терна проводится еще один круг торговли.</string>
    <string name="rules4">После терна, если это необходимо, кладут последнюю общую карту – ривер.
\nПосле ривера следует еще один раунд торговли, и если после него на банк претендует два или более игроков, то происходит вскрытие.
\nКомбинации по правилам покера составляются из пяти общих карт и двух закрытых. Когда была осуществлена и уравнена последняя ставка, все оставшиеся в игре люди по очереди начинают открывать для противников свои карты. Из них составляются и оцениваются итоговые выигрышные комбинации. </string>
    <string name="selectWinner">Выбор пебедителей</string>
    <string name="_4">Игрок 4</string>
    <string name="_3">Игрок 3</string>
    <string name="_1">Игрок 1</string>
    <string name="_2">Игрок 2</string>
    <string name="_5">Игрок 5</string>
    <string name="_6">Игрок 6</string>
    <string name="_7">Игрок 7</string>
    <string name="_8">Игрок 8</string>
    <string name="_9">Игрок 9</string>
    <string name="_10">Игрок10</string>
    <string name="selectedWinner">Готово</string>
    <string name="start">Начать</string>
</resources>
