<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAAA"
    tools:context="duke.simfik.poker.game">

    <Button
        android:id="@+id/button2"
        android:layout_width="153dp"
        android:layout_height="74dp"
        android:layout_marginEnd="129dp"
        android:layout_marginStart="129dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="261dp"
        android:layout_height="91dp"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="361dp"
        android:layout_height="62dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/fold"
        android:layout_width="115dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/fold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <Button
        android:id="@+id/call"
        android:layout_width="115dp"
        android:layout_height="65dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="23dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/call"
        app:layout_constraintEnd_toStartOf="@+id/reiz"
        app:layout_constraintStart_toEndOf="@+id/fold"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <Button
        android:id="@+id/reiz"
        android:layout_width="115dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="23dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/reiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <TextView
        android:id="@+id/bank"
        android:layout_width="332dp"
        android:layout_height="54dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="8dp"
        android:text="@string/bank"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="111dp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="47dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:text="@string/textview"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
